# easy_stock

./: .gitignore  AGENTS.md  README.md  stock_policy.code-workspace  系统管理生成提示词.md
ai-analyzer-service/: .env.example  README.md  main.py  pyproject.toml  run.py
ai-analyzer-service/app/: __init__.py  main.py  mcp_server.py
ai-analyzer-service/app/api/: __init__.py  router.py
ai-analyzer-service/app/core/: __init__.py  ai_provider.py  config.py  logging.py  mcp_client.py
ai-analyzer-service/app/mcp/: __init__.py  advice_mcp.py  model_mcp.py  risk_mcp.py  trend_mcp.py
ai-analyzer-service/app/models/: __init__.py  advice_models.py  model_models.py  risk_models.py  trend_models.py
ai-analyzer-service/app/services/: __init__.py  advice_service.py  model_service.py  risk_service.py  trend_service.py
ai-analyzer-service/tests/: __init__.py  conftest.py
ai-analyzer-service/tests/test_providers/: __init__.py
factor-service/: .env.example  README.md  main.py  pyproject.toml
factor-service/app/: __init__.py  main.py  mcp_server.py
factor-service/app/api/: __init__.py  router.py
factor-service/app/core/: __init__.py  config.py  logging.py  mcp_client.py
factor-service/app/mcp/: __init__.py  backtest_mcp.py  factor_mcp.py  indicator_mcp.py
factor-service/app/models/: __init__.py  backtest_models.py  factor_models.py  indicator_models.py
factor-service/app/services/: __init__.py  backtest_service.py  factor_service.py  indicator_service.py
factor-service/tests/: __init__.py  conftest.py  test_backtest_service.py  test_factor_service.py  test_indicator_service.py
qmt-service/: .env.example  README.md  account.md  main.py  pyproject.toml  run_mcp.py  test_balance.py  test_data_methods.py  test_factor_screen.py  test_market_data.py  test_mcp_quick.py  test_screen_direct.py  test_stock_name.py
qmt-service/app/: __init__.py  main.py  mcp_server.py
qmt-service/app/api/: router.py
qmt-service/app/core/: auth.py  config.py  qmt_client.py
qmt-service/app/mcp/: __init__.py  factor_mcp.py  position_mcp.py  quote_mcp.py  (+2 more)
qmt-service/tests/: test_mcp_client.py  test_mcp_tools.py
(+458 files in other folders)
